Updated Policy Search Endpoint